[package]
name = "imagecli"
version = "0.2.1"
authors = ["theotherphil"]
edition = "2018"
description = "A command line image processing tool."
repository = "https://github.com/theotherphil/imagecli.git"
homepage = "https://github.com/theotherphil/imagecli"
license = "MIT"
exclude = ["images/*"]

[dependencies]
glob = "0.3.0"
image = "0.23.14"
imageproc = "0.22.0"
lazy_static = "1.4.0"
nom = "7.0.0"
regex = "1.5.4"
snafu = "0.6.10"
structopt = "0.3.23"

[dev-dependencies]
criterion = "0.3.5"
pretty_assertions = "1.0.0"

[lib]
name = "imagecli"
path = "src/lib.rs"

[[bin]]
name = "imagecli"
path = "src/main.rs"
doc = false

[[bench]]
name = "benchmark"
harness = false
